<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingActivity" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.78"
         android:orientation="vertical" >

        <LinearLayout
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
    		android:gravity="center"
	    	android:orientation="horizontal" >

	    	<Button
	    	    android:id="@+id/btnSetting"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/ic_action_settings"
		        />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/setting" />
		</LinearLayout>        
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@color/red"
	        />
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
	        <TextView
		        android:id="@+id/setting_model"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
    			android:gravity="left"
    			android:layout_gravity="left"
		        android:textAppearance="?android:attr/textAppearanceLarge"	        
		        android:text="@string/setting_model"
		        />
	        <ScrollView 
	            android:layout_width="match_parent"
			    android:layout_height="wrap_content">
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical">
			        <LinearLayout
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal"
				        android:gravity="center_vertical"
				        android:layout_marginTop="10dp"
				        android:layout_marginBottom="10dp" >
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:background="@drawable/rectangle_shape"
				            android:gravity="left"
				            android:textSize="20sp" 
				            android:text="@string/model_options"
				            />
		
				        <Button
				            android:id="@+id/model_option"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:paddingLeft="8dp"
				            android:paddingRight="8dp"
				            android:text="@string/select_model_options"
				            android:textSize="20sp" />
		
				    </LinearLayout>
				    <LinearLayout
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal"
				        android:layout_marginTop="10dp"
				        android:layout_marginBottom="10dp" >
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:background="@drawable/rectangle_shape"
				            android:gravity="left"
				            android:textSize="20sp" 
				            android:text="@string/model_security_tele"/>
				        <EditText
				            android:id="@+id/model_safty_tele"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:hint=""
				        	android:layout_marginLeft="10dp"
				        	android:paddingLeft="8dp"
				        	android:paddingRight="8dp"
				            android:gravity="left"
				            android:background="@drawable/display_shape"
				            android:textSize="20sp" />
				    </LinearLayout>
				    <LinearLayout
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal"
				        android:layout_marginTop="10dp"
				        android:layout_marginBottom="10dp" >
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:background="@drawable/rectangle_shape"
				            android:gravity="left"
				            android:textSize="20sp" 
				            android:text="@string/model_first_pwd"/>
				        <EditText
				            android:id="@+id/model_first_pwd"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:hint=""
				        	android:layout_marginLeft="10dp"
				        	android:paddingLeft="8dp"
				        	android:paddingRight="8dp"
				            android:gravity="left"
				            android:background="@drawable/display_shape"
				            android:textSize="20sp" />
				    </LinearLayout>
				    <LinearLayout
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal"
				        android:layout_marginTop="10dp"
				        android:layout_marginBottom="10dp" >
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:background="@drawable/rectangle_shape"
				            android:gravity="left"
				            android:textSize="20sp" 
				            android:text="@string/model_second_pwd"/>
				        <EditText
				            android:id="@+id/model_second_pwd"
				            android:hint=""
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				        	android:layout_marginLeft="10dp"
				        	android:paddingLeft="8dp"
				        	android:paddingRight="8dp"
				            android:gravity="left"
				            android:background="@drawable/display_shape"
				            android:textSize="20sp" />
				        </LinearLayout>
				    </LinearLayout>
				    
			</ScrollView>
	    </LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/setting_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/input_cancel_plan" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/setting_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_apply_plan" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
