<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
	    android:id="@+id/mainSetting"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
	    android:text="@string/display_plan"
	    android:textSize="20sp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/red"
        />
    <ScrollView
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@color/white">	    
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">	 
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp">
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="left"
		            android:text="@string/plan_name"
		            android:textSize="20sp" />
		        <TextView
		            android:id="@+id/plan_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp"/>
		    </LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp">
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="center_horizontal"
		            android:textSize="20sp"
		            android:text="@string/plan_place"/>
		        <TextView
		            android:id="@+id/place_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		        	android:layout_marginLeft="10dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp" />
		    </LinearLayout>
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp">
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="center_horizontal"
		            android:textSize="20sp" 
		            android:text="@string/plan_model"/>
		        <TextView
		            android:id="@+id/model_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp" />
		    </LinearLayout>
		
		
		     <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp" >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="center_horizontal"
		            android:textSize="20sp"
		            android:text="@string/plan_begin_time"/>
		        <TextView
		            android:id="@+id/begin_time_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp" />
			</LinearLayout>
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp" >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="left"
		            android:textSize="20sp" 
		            android:text="@string/plan_end_time"/>
		        <TextView
		            android:id="@+id/end_time_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp" />
		    </LinearLayout>
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/rectangle_shape"
		            android:gravity="left"
		            android:textSize="20sp"
		            android:text="具体内容"/>
		        <TextView
		            android:id="@+id/content_detail"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:paddingLeft="8dp"
		        	android:paddingRight="8dp"
		            android:gravity="left"
		            android:background="@drawable/display_shape"
		            android:textSize="20sp" />
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>
    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/return_main_page" />

</LinearLayout>