<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/appName"
	            android:layout_width="0dp"
	            android:layout_height="50dp"
	            android:layout_gravity="center"
	            android:layout_weight="6"
	            android:background="@drawable/button_onoff_indicator_off"
	            android:gravity="center"
	            android:text="@string/app_name"
	            android:textSize="20sp" />
	        
	        <Button
	            android:id="@+id/mainSetting"
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:background="@drawable/ic_action_settings"
	            android:textSize="15sp" />

	    </LinearLayout> 
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@color/red"
	        />
	        
	    <ListView
	        android:id="@+id/mylist"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        />
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@color/red"
	        />
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        >

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:gravity="center">
	        <Button
	            android:id="@+id/plan_add"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/add_plan" 
	            />
		</LinearLayout>
		<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:gravity="center">
	        <Button
	            android:id="@+id/plan_simple"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/simple_plan" 
	            />
		</LinearLayout>
		<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:gravity="center">
	        <Button
	            android:id="@+id/plan_complete"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/complete_plan" 
	            />
		</LinearLayout>	
    </LinearLayout>
</LinearLayout>
